@@ -527,6 +527,10 @@
       \item \code{reorder()} and \code{midcache.dendrogram()} now are
       non-recursive and hence applicable to somewhat deeply nested
       dendrograms, thanks to a proposal by Suharto Anggono in \PR{16424}.
+
+      \item \code{cor.test()} now calculates very small p values
+      more accurately (affecting the result only in extreme not
+      statistically relevant cases).  (\PR{16704})
     }
   }
 
